# godot-tezos

godot/: icon.svg.import  player.tscn  project.godot  tezos.gdextension
rust/: Cargo.toml
rust/src/: player.rs
