[package]
name = "tezos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
async-std = "1.12.0"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
tezos-rpc = { git = "https://github.com/airgap-it/tezos-rust-sdk" }
tezos-core = { git = "https://github.com/airgap-it/tezos-rust-sdk" }
tokio = { version = "1.33.0", features = ["rt"] }
